//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  email String [unique, not null]
  password String [not null]
  firstname String
  lastname String
  posts Post [not null]
  role Role [not null, default: 'USER']
  appointmentsAsAuthor Appointment [not null]
  appointmentsAsPatient Appointment [not null]
}

Table Post {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  published Boolean [not null]
  title String [not null]
  content String
  author User
  authorId String
}

Table Appointment {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  date DateTime [not null]
  title String [not null]
  content String
  author User [not null]
  authorId String [not null]
  patient User [not null]
  patientId String [not null]
}

Enum Role {
  ADMIN
  USER
  PATIENT
  DOCTOR
  LABORATORY
}

Ref: Post.authorId > User.id

Ref: Appointment.authorId > User.id

Ref: Appointment.patientId > User.id